Addeed endpoint for address and delivery method (#66)
