# commons-microservice/src/client-order/model/addressSetEvent.ts
@@ -1,0 +1,29 @@
+/**
+ * order-microservice
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { UserBaseEvent } from './userBaseEvent';
+import { AddressSetEventAllOf } from './addressSetEventAllOf';
+import { AddressDto } from './addressDto';
+
+
+export interface AddressSetEvent { 
+    who: string;
+    _with: AddressDto;
+    what: AddressSetEvent.WhatEnum;
+}
+export namespace AddressSetEvent {
+    export type WhatEnum = 'AddressSet';
+    export const WhatEnum = {
+        AddressSet: 'AddressSet' as WhatEnum
+    };
+}
+
+
